# BiblioSophia

./: .gitignore  GUIA_DE_USO.md  SETUP.md  index.html  instalar-dependencias.bat  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: Dashboard.tsx  MainScreen.tsx  ResultView.tsx  Settings.tsx
src/services/: tauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
