[package]
name = "bibliosphia"
version = "0.1.0"
description = "BiblioSophia — AI-powered video knowledge capture app"
authors = []
edition = "2021"

[lib]
name = "bibliosphia_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
